# ChangeLog for dev-libs/libsodium
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsodium/ChangeLog,v 1.20 2015/01/17 02:24:31 mrueg Exp $

*libsodium-1.0.2 (17 Jan 2015)

  17 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +libsodium-1.0.2.ebuild,
  -libsodium-0.6.1.ebuild, -libsodium-1.0.0.ebuild:
  Version bump. Remove old.

*libsodium-1.0.1 (22 Nov 2014)

  22 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-1.0.1.ebuild,
  -libsodium-0.7.0.ebuild, -libsodium-0.7.1.ebuild:
  Version bump. Cleanup old.

*libsodium-1.0.0 (24 Sep 2014)

  24 Sep 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-1.0.0.ebuild:
  Version bump.

*libsodium-0.7.1 (23 Sep 2014)

  23 Sep 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.7.1.ebuild,
  -libsodium-0.4.5.ebuild, -libsodium-0.5.0-r1.ebuild,
  -libsodium-0.6.0-r1.ebuild:
  Version bump. Cleanup old.

*libsodium-0.7.0 (27 Aug 2014)

  27 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.7.0.ebuild:
  Version bump.

  26 Aug 2014; Joshua Kinard <kumba@gentoo.org> libsodium-0.6.1.ebuild:
  Added ~mips to KEYWORDS, per Bug #520740.

*libsodium-0.6.1 (20 Jul 2014)

  20 Jul 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.6.1.ebuild:
  Version bump

*libsodium-0.6.0-r1 (07 Jul 2014)

  07 Jul 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.6.0-r1.ebuild,
  -libsodium-0.6.0.ebuild:
  Fix subslot value. Thanks to Arfrever.

*libsodium-0.6.0 (04 Jul 2014)

  04 Jul 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.6.0.ebuild:
  Version bump.

*libsodium-0.5.0-r1 (26 May 2014)

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.5.0-r1.ebuild,
  -libsodium-0.5.0.ebuild:
  Add subslot as suggested by Arfrever.

*libsodium-0.5.0 (25 May 2014)

  25 May 2014; Manuel Rüger <mrueg@gentoo.org> +libsodium-0.5.0.ebuild:
  Version bump.

  16 Mar 2014; Mike Frysinger <vapier@gentoo.org> libsodium-0.4.5.ebuild:
  Add ia64 love.
