@@ -1,6 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST libsodium-1.0.1.tar.gz 1651848 SHA256 c3090887a4ef9e2d63af1c1e77f5d5a0656fadb5105ebb9fb66a302210cb3af5 SHA512 e8df31fd53251491b23b55ba3bde6bb77d0f271439697120b0b024165cb20ca8a4af9b0b01ca09950a3b3222b0030456978541ff3baae4883718ec37898d2435 WHIRLPOOL e6443639e2a39b4104c8a4fb84018c3f195aa7f62d736f6a6d68f87ca30c413253b08d93e3d13596b872d97a8905fa4137d98a61fad80edfb588315c0fe5af11
 DIST libsodium-1.0.2.tar.gz 1673394 SHA256 961d8f10047f545ae658bcc73b8ab0bf2c312ac945968dd579d87c768e5baa19 SHA512 15fc47516f0e35906c1c304205fa991e74a273e4e6fc2186b6c16f0e41523de24493e149262b97ef03e4adc221232372ef1f283c4c23f96e4c5d99023d361e14 WHIRLPOOL 18509d9911c1d0ec6e8b9a8735abfeb2c1623669d31045abc6d9dd1289571fbe3a055f960f42a86779e7c03967532d71d7b9d0597ecfe457672e69b27b577e48
-EBUILD libsodium-1.0.1.ebuild 782 SHA256 31392050b1742ba92db92796c4d0a256411661e40ca14e2b41f46e725b7371b2 SHA512 c3229a0936125c4114efb6bdcf70debe192aebf64824f2dfaeadd153a0956c942e84087c4992bcc126f131789a73e4a2a98b5f5f002e2084f3220dd44cb06f91 WHIRLPOOL 1de02e4c0b8e8d77b61eea19f9921dae6f9d7960a0e37ccbdf23315bcb64f61e55359949d8d300beaae0d86496f93e01310a7c33effe7a86420b54adbf537b4f
-EBUILD libsodium-1.0.2.ebuild 782 SHA256 4c043e87ca190806f55936e82a75f563705f5755b9b2d8a4d9d4984d38d664d6 SHA512 345c2479d9349a0392c8bd9859d3188a66d73049b2c44fe06c5b9b16d632447454cffd0e1f84bc72785c30d4c85b8cc044498d33425cf07aa2a1c04c2dbc660a WHIRLPOOL 7b0e2d9d31e0d6895506b247d29bd1ececa0bd5d07d4abaf1a466285eda9c23e5d0e32936f9fd7dfeebc24c5bd14d0499ed5dbc743fe7a0958bb5c55d8e765c4
-MISC ChangeLog 2859 SHA256 0fdb4ccd24acd60e003e11f041d2176707e65427bcb415aff1cbc61648c89a61 SHA512 6f88e11c5f54fdd136134b0b821b16df147add2633f3fbc3b38d59bcaa474e30f3588c2e81d707b47df6831ef5faf27b0c09ed6f2e64b6f12702572661d16b72 WHIRLPOOL 03014243f7f521e2c54b1506e0c7d8ec9f5dc29d38334ace774c23338609bb210f855631433df57446034263126ac83711a4d18add3bbb3e37c571e56dff9a06
+EBUILD libsodium-1.0.1.ebuild 797 SHA256 6f708adc056bd54903b1838be158f91453fdcbf0afe64e0e635acd05dd21855f SHA512 6d66d76a2575d5adf6f3a5516e6ac0c3fb3012229b9ee3e3a0fea5a0ef5adf2c0785f5ef4c6dacedd7de88c4d3fa7e573259354badc99808905e7f00fa2b9091 WHIRLPOOL ce5e625588b510c11b18b748515a6d5f596a56bd54492bfb296fafb412407ccd7693b7e043697725fe8bc2c4f8305a69274fb4478017cac90151cf7d0fe69e4c
+EBUILD libsodium-1.0.2.ebuild 797 SHA256 d6c04527408db4dd0f8f9b0db282655b1879d28cf8bbc7de3930adb213f67e9c SHA512 ec40afe042798bce102867ab87b2e0f1a9c1b5f04b9aedf490105d435a03c7b8c5763b20a569759ce1ab449d314e1a9ae0b2e711c81b8cc591ab6b610a763b22 WHIRLPOOL 0034f7082091f00fe3722f7becb2b8a0d40e0e9431d5ad488df7b67da60ea951a2b9ab2fa5e181ddebeb54d98a344ac58f743a2c9cff7bde2af5b340390912c7
+MISC ChangeLog 3004 SHA256 8bb8fb03b9f5c2a1c303cc789987905b46e40679807b6c9821809861700ed6db SHA512 1bcafac4c2aa4ccff00fc8e80386dd71d7d0354d788a8a49baad5e37a4df567a8eb7f1f1c672662ac0fadb7d6736bc92cd06de6bec3383dcf2e8dd9776a83d7f WHIRLPOOL 8b7c9e6bc8efe55070a269b6073286baabf24ae057f489de10af4859f0e9bc9758f6414d4795ade31f2fc7d50bf58fcf2cc49c2767380aec928b4315d0d9be61
 MISC metadata.xml 786 SHA256 e30da4e67f47271fad64f9411dd5cfef13b2d83dbdea7d81b0c06ed92367d795 SHA512 64396678cc91f1ce9b938cce2444be402459b6eba438f40016770c61c05d5b8ea56ef3e8b9eb56125a3e4240719201fedcf4659ab11cd1fee69468df1a06a04e WHIRLPOOL fe39aa1a30ea678ac176929ca782d79485f31a95f762b1878171efa5c44246b3a0c97452fb27628be9b7bb207419a5e3457cc180e6655222c76f8bf5529f6feb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJU2LA6AAoJEJOE+m71LUu68HQP/3MDkccAwrJC2JyAc9246+hY
+2F4KLqNQA2gKUQjPohn+n3W2HbaLGiCREgN1/eufGz56sJw2AolIHeRwUbllTOKk
+N7z4Au5aOjncCDUTCmKomRdlXbB4/EzlxakaK+ZtskanDfIv3ed7qbxryWF2gHku
+5a34dspy2shW3DWP9EdzuEelx1L3JPaP+6pQj30lNmMiNgKsSFmiT6+Wirwf53tw
+ahpFznp0+SyzKGpRiCC0cXbfx6An+jH7oMbqsYynDpXNwFk7s6GIzAlBvCkVWqtU
+PMq0mhWpbmuiuh/WXa4rmA8fX99S5erh2jI1K8yZ7/sxirdHuv7DKOhynZQb5Dzf
+1x96VKD7OKIlIcHAmeLPU+x4omBcXTAyP53NR0xXJh9GEnLE4+ZhvejwmiwUR7On
+dDjsmnPfPmkvs3Go+NPafWrOpt7s+aLZ6DuGOVQl77yAHuv0VMUt1Prco3DN2NaL
+huFokgNwwAipB3udO6AmvPuHTMLzOm+rv9GYylWS/IOlHWcTx+ovNbGokwu/FQlX
+Pl+3cCMTm9aEY4My0VJ0JjpzdJWHUBxMJv6cc4PTotgpkrnZ+PiOSCXekCpAp0aq
+tb89PzIB6n79zN/Qcxy3LKfzy0A2XEok+3ixCgCocO9k+Dbj+4t2KGaRkXOVpzo1
+Q8rWj0lXjCupch9evejY
+=oe48
+-----END PGP SIGNATURE-----
