@@ -3,9 +3,9 @@ DESCRIPTION=A portable fork of NaCl, a higher-level cryptographic library
 EAPI=5
 HOMEPAGE=https://github.com/jedisct1/libsodium
 IUSE=+asm minimal static-libs +urandom
-KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~mips ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=ISC
 SLOT=0/13
 SRC_URI=http://download.libsodium.org/libsodium/releases/libsodium-1.0.2.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=2fb91ced8c70c0292b5bccbebe2537bd
+_md5_=5adc5b1ed6728c1b8df6fc566366c74c
