@@ -4,10 +4,10 @@ DESCRIPTION=A brokerless kernel
 EAPI=5
 HOMEPAGE=http://www.zeromq.org/
 IUSE=pgm static-libs test
-KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~mips ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=LGPL-3
 RDEPEND=dev-libs/libsodium pgm? ( =net-libs/openpgm-5.2.122 )
 SLOT=0
 SRC_URI=http://download.zeromq.org/zeromq-4.0.4.tar.gz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	autotools-utils	3727db64c7b960903d5033280f108080	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=9a6c4b543dedb43a61cf7eedc28b2aeb
+_md5_=e0a0ef3311e3209589598688ae96bd51
