@@ -10,25 +10,25 @@ DIST zeromq-4.0.4.tar.gz 2149732 SHA256 1ef71d46e94f33e27dd5a1661ed626cd39be4d2d
 EBUILD zeromq-2.2.0.ebuild 1404 SHA256 c73508b0e8833779790e9923618a2f716e4f6a9e4989a722165eddaea505e53d SHA512 414e3088a4e123e4990ff03abe44edca16de97723f26cacd160a28a410a1e1ade729a7cd09efcb88a0d6721825986ffd767d515334bf6e3ee33da615fd13a7fe WHIRLPOOL d593defd8b68741f73a442d46bd5e426d4cb0a58d13d998301e0288188c9e5442fea535467160b70cef282fc34f788e173808c9fcc0b2734f448c181e155b390
 EBUILD zeromq-3.2.3.ebuild 1716 SHA256 112a941a11a42fd1992ba9971cc0e8fb4afda2a95ca19627cbb3c775a2ec9a87 SHA512 01367c503193b6a48d2f76663fd539a952c0a28a303db223a5e9c37419060d30370891440428bd48af7aef87b4ec59ab549add5c8e0ae19b0208b1bdf4bb4d53 WHIRLPOOL db2e3a5cbe65dda171c95386a4c278bc5825c13b6a1606602e44281727f84b71bde81d5eed6c75c027d0e29989599ef42d1e9fbad57f327289992580631112a6
 EBUILD zeromq-3.2.4-r1.ebuild 1666 SHA256 06731b34766402805972d13feb36ac1340268040f07b89a195cc80ca98dcf15c SHA512 f02e6e7a4b931ebb76b02dc10665fec504754179fddc49e204e591542b8059cfc1794853650e25d508bc98a139ede700404f83d4a01adeac08fe06260e317472 WHIRLPOOL 4bba7f1d46f9b31af3cee01ee6f77275cf20a6b422548cac174d74cded297bbab9b6b440d28efff715e192efa2b78af87943bf93492c34593fa39f988deac695
-EBUILD zeromq-4.0.1-r1.ebuild 1209 SHA256 47b62ab14c182a11b8128c338373dbfbefc184606b7caffcf7730a99927e513d SHA512 b6d387b1c546465993706095716cb1daeb88a4fcdb6e128bd7d7580c12f1abe4ae89564df6cd432fa500db30ac0ddb6b9b028c8c3f39ab19f14f4c1ba6ff4a74 WHIRLPOOL 7e3868f3d464711137e187b623d0a3bb28e8af152ee986a11e4d44baeb3f9864671b236373d2db14248ec20ccb4c6027b808fffc458b35b2f2f5af102b19cf55
+EBUILD zeromq-4.0.1-r1.ebuild 1222 SHA256 ebbd0b2295a79e01cb748ea38f4d4df379b53fdeebd1abf1ba0cffde15c47e52 SHA512 b3ef11ad38c280964dc82c0f87e8a77a7510336a62bfee41bb28c4e77e738e098a62c6bdea4f02cc2b200a8b9874aa51f6c5d3a953597ea795a4882db32a9e0d WHIRLPOOL 47338187d9ad28fdd74a3c4f72d05b74b9d27e0731aec5a63d75eba856b852fdcf6558da33ada78591c016cd30e04ebf601a894d5cb5eaf56e6c050633a45251
 EBUILD zeromq-4.0.1.ebuild 1316 SHA256 3c3bba2a6b493a62a01195aad8a01937089662314d72e4d835ae9e32576f3466 SHA512 ccb3ae9ca31188b6dd2c8c82ea4ddb2480e4080e7ea0cbc4b4bcb78c092dcdb6d938681897d2a6d2142041d0a78683f2d7ae154d7504d8c3f3be5cdfa645656f WHIRLPOOL 7b72b4001e91e0be8d036294929305d2b2e26500acd64c6610b64144f793fa518c9df12bb0d702b1e1a5312fc1ad004cad63008731f6ceb135c13f6691244676
-EBUILD zeromq-4.0.4-r1.ebuild 1132 SHA256 53103ea39e5856b8188f09c9a3b2cc644b4542c6b893da94e0f4aefc1961977e SHA512 d943459e9763a3345c992dfe6e8778966b3f3f31571073458d61e1e442ceb385cc2f364b7b86304fa102a145f1d62e4bababa86b8b47c3b172a96cbf87daaa04 WHIRLPOOL b75e5bad89e17b4325f975b54c1ea882360a8b18da1362c42ac699f1629b7fe5637d26b7e437438a2bdba71c4d9f3125110fd2f8e6e61da6525a6171825da08c
-MISC ChangeLog 8239 SHA256 92bd926da6d82ecd46508bd38f23bb438b4178ae16ca14eba8701636095731c4 SHA512 a35cdfd76c39d9124526027290c1d0841c12c77ed1b46a59740453cc5207d9a799e10c2675aaba823229607881b2a1b76d036bd320fcc2214a620b3e0a1ab4d4 WHIRLPOOL 0dca859f56210c8fcb537f0f14e0b40fb89347ceafe1aa858745fa1cb35325207b9113290f21fb5f4f2d488ff5dc2a0e92d6178908226d62230723f1b93424bf
+EBUILD zeromq-4.0.4-r1.ebuild 1147 SHA256 26660e6d33291bc94ebae5a814eb40f04c1b9ee1a87a595c983d911e02fd332e SHA512 5c2048c820fab8336aa9d312b9a588ab0740c7d7d4af406fb46e923716fd417fd9e44829849de2e0de36cd41cefefcd5389fbe4afae4e5ebecd88d0581b9bd16 WHIRLPOOL 446d6f8ad22883accac5ee58f49d352cac8ad5e719bbaa7b52c8ab1e89729adf2d428a027fc09505ba1f16d89735db744b09dc8e2f71a446977cc9c39607874e
+MISC ChangeLog 8384 SHA256 d513503aaadb2d64ca81a61f1c6a9af2ff65b23f7a5325529c607e9dd4eed307 SHA512 f7203f031076c130dcf77cb2e8c8110df1d7912226f243544e674da0b27e2156b7abe2e91f5cef08dc2fb9b3a07ab1f2cf8cd0f293a98f02a0dfa85dd94a0738 WHIRLPOOL da891eff989eace7edd752f5f9cbcb92ea13885d49d8661143177c00d74058ee6ffc2e35215895d4e2da32ace07215784565f4ddd8a50b089ffdb7f7ade443cb
 MISC metadata.xml 1205 SHA256 aa5d3cf383d233fb3dcc987ee1defb5145452603fa7559712cd6a6b65c490699 SHA512 28c8088cae0dbc58fd5cf32bf76e6f7e234595467416864dcc3e57df4271b02c50c1cf4de5ae9bad271f3b1833644653c0d63c3a81da5364c5c9f26766ca2f0f WHIRLPOOL 22aec7996be27f1b54223f3dda9910786290315bb62013de8a87c29ed36e2c94c265f4ed11d11a03e160c0c28d617badfc7222303e7f1af203dffad6ce4a4ba4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT/FwxAAoJENsjoH7SXZXjz3wQAMdcJoGGABG4UrsG9o9RMapA
-zH2+lCIDcgrUJQCvgkN4Wc0+Q0hlBGAiKnbbCmMM1rUCxUcKL+GTL292+o5+/sZO
-rJj5yfuHArjKTkPb4VKI+KCSwruebx5z05BujvdFwAJL4CLcTAFCaKL4csnpsft5
-ysbJ2uajCwRKDTwdpSS127U8Kz2ZoQ9FXLKPgT7jpLVU+z0+FmBJdYZtO6DK/BJq
-bGbgt+VP1zIaln547PmYa2r6cCS4nISqoltapX1MOtvIJVRDgrWq+yrGgl6Qqpco
-wrGMDJNGCDM9gLDtg3ShznJGKyOyvcp5MQjXGQvL199yYTMrzvilqzQqSqxCbEBg
-mI+djqc63NZcis5xEjVEw5s5Vc65TASBORDS2InXbLCHD4CSxs/7icOwU7MaXz1v
-VGY2zrD70UrhUxRWxBNKLbPVYymdGwuy9F93omJQl030RfK0/4z6r7nyX5Bf/JmM
-V0tK5OnFHS6KAqsAQW6/4vxjNplupmJqp3fL5KCYalIc91jrwYtKjrwCew6KB9gx
-A40KOcaglpt5XHRZk2Dlz9VVGfcc0kIx+Q/gkm8UE46Ctgbds7rx+ct5/gVDN15u
-759Rttf0LXEthkh8uyilYjCPL2xWaip+FhpJjgeUb7Rgz7s4ZncCYjayQCvqy02g
-W9OQBZGNw1/jPzU5EYrW
-=lbC/
+iQIcBAEBCAAGBQJU2LCVAAoJEJOE+m71LUu65joQAK2TwWMrrPK9kRCoRnxtifbJ
+JUbyAlW3jpRZA6AGA0VkPS6I4xC4m/qbs4Y93HZssmsaHtyix8FLTQV2cnKweykL
+zXDFAkiyKSLesz0RXGWtNg7ELbbz/irDI6m1xrqgVRwHStOASHbCt+DCe5XtoJmz
+SKX0p14X3yPI4+UVXBkFVzOIzNd9TYlSrP6XJp5M7cDbl2BjRur8zk7mU6XkKhCu
+OYe0PN/J10nqC3UBBX4bQM8uVI3y4zbeQUeidS42xvCRIA+zILJmyyRp7TwaNLNX
+5RFsEHmcDBfLTwmiAFl5vf5C76E6U0+FkChBKcrO1d38jZ3t2K6Q0u1KnqF4fqGF
+HAFRdQzn83XlQloDNO5LydEbwhuZMHf1oUo1D7aAYrgkJsIOzOYJ/vNXwREikiFi
+MykxUUVolA/Io+YQlBm3ekhNPcQH4m7B6zfvVsXYc9GkyTSbrT1XCxm1lgyQqyi/
+N5E5DL0tg+jSk1YePRtGD+Vx9Mf2tmt7RTgy6f8+92Cx29EsMKJYMMzv3f4YL2bk
+2LCPfn/EMzQCHkBEwHbjCEt6fSuQ8a5ixZeic6MyiGh/FObsHbAxWWgyLngSxcL3
+APTO5stxzsnoxLxhIRtj+8Ptm/eWxo8ViIpGtWEO4zmxyYu87EDJxwiNr/Yp+it4
+Eo3iikKs3lwrd/8qJDZO
+=6uCC
 -----END PGP SIGNATURE-----
