@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/zeromq
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.62 2014/08/26 10:06:22 kumba Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.63 2015/02/09 13:02:40 blueness Exp $
+
+  09 Feb 2015; Anthony G. Basile <blueness@gentoo.org> zeromq-4.0.1-r1.ebuild,
+  zeromq-4.0.4-r1.ebuild:
+  Keyword ~ppc ~ppc64, bug #489452.
 
   26 Aug 2014; Joshua Kinard <kumba@gentoo.org> zeromq-4.0.4-r1.ebuild:
   Added ~mips to KEYWORDS, per Bug #489452.
