@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libsodium
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsodium/ChangeLog,v 1.20 2015/01/17 02:24:31 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsodium/ChangeLog,v 1.21 2015/02/09 13:01:08 blueness Exp $
+
+  09 Feb 2015; Anthony G. Basile <blueness@gentoo.org> libsodium-1.0.1.ebuild,
+  libsodium-1.0.2.ebuild:
+  Keyword ~ppc ~ppc64, bug #489452.
 
 *libsodium-1.0.2 (17 Jan 2015)
 
